--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,12 +1,26 @@
 body{
-    background-color: gray;
+    background: linear-gradient(to bottom, rgb(10, 10, 67), rgb(1, 72, 9)) fixed;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("/images/back.jpg") no-repeat center center fixed;
+    background-size: cover;
+    opacity: 0.03;
+    pointer-events: none;
+    z-index: 1;
 }
 .container{
     margin-top: 7%;
     padding: 30px;
     padding-top: 50px;
     width: 30%;
-    background-color: white;
+    /* background-color: black; */
+    background-color: rgba(0, 0, 0, 0.389);
+    backdrop-filter: blur(20px);
     text-align: center;
     border-radius: 20px;
 }
@@ -17,6 +31,7 @@ body{
 h3{
     margin-bottom: 30px;
     font-weight: bold;
+    color: white;
 }
 #google{
     height: 30px;
@@ -27,4 +42,8 @@ h3{
     height: 30px;
     width: 30px;
     margin-right: 5px;
+}
+.navbar{
+    position: relative;
+    z-index: 2;
 }
